# NEU_scheduler

./: .gitignore  README.md
.github/workflows/: codeql.yml
client/: .prettierignore  .prettierrc  README.md  auth.ts  middleware.ts  package.json
client/.husky/: pre-commit
client/app/: globals.css  layout.tsx  page.tsx
client/app/(auth)/: layout.tsx
client/app/(auth)/error/: page.tsx
client/app/(auth)/sign-in/: page.tsx
client/app/(auth)/sign-up/: page.tsx
client/app/courses/: page.tsx
client/app/dashboard/: page.tsx
client/app/planner/: page.tsx
client/app/schedule/: page.tsx
client/components/: ai-planner.tsx  calendar-01.tsx  course-search.tsx  custom-pagination.tsx  navbar.tsx
client/components/auth/: auth-form.tsx  auth-guard.tsx  user-dropdown.tsx
client/components/magicui/: ripple-button.tsx
client/components/providers/: auth-provider.tsx
client/components/ui/: calendar.tsx  form.tsx  select.tsx  sidebar.tsx
client/hooks/: use-pagination.ts  useCourses.ts
client/lib/actions/: auth-actions.ts  graphql-actions.ts
client/lib/api/: auth.ts  course.ts  graphql.ts
client/lib/hooks/: useCourses.ts
client/types/: api.ts  auth.ts
server/: .env.example  README.md  pyproject.toml
server/app/: config.py  main.py  redis_client.py  test.py
server/app/graphql/: schema.py
server/app/graphql/resolvers/: auth_resolver.py  course_resolver.py  health_resolver.py  schedule_resolver.py
server/app/graphql/types/: course.py  schedule.py  user.py
server/app/neu_api/: searchneu_client.py
server/app/services/: auth.py  email.py  email_factory.py  html_parser.py  otp_cache.py
server/app/storage/: r2_client.py
server/app/test/: test_graphql.py
server/app/worker/: __init__.py  celery_app.py  tasks.py
